cabal-version: 1.12

name:           haskell-scheme
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/haskell-scheme#readme>
homepage:       https://github.com/githubuser/haskell-scheme#readme
bug-reports:    https://github.com/githubuser/haskell-scheme/issues
author:         Paulo Alves
maintainer:     contato@pauloalvesjr.com
copyright:      2020
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/haskell-scheme

executable haskell-scheme
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules:
      Env
    , Eval
    , LispVal
    , Parser
    , Primitives
    , Repl
  build-depends:
      base >=4.7 && <5
    , mtl >= 2.2.2
    , parsec >= 3.1.14
  default-language: Haskell2010

test-suite haskell-scheme-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Env
    , Eval
    , LispVal
    , Parser
    , Primitives
    , Repl
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-scheme
  default-language: Haskell2010
